--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -11,7 +11,7 @@
                 <form method="POST" action="/savequestion">
 
                     <label>Title</label>
-                    <input name="title" type="text" placeholder="Title" class="form-control"><br>
+                    <input name="title" type="text" placeholder="Title" class="form-control" autocomplete="off"><br>
 
                     <label>Description</label>
                     <textarea name="description" placeholder="describe your question here" class="form-control"></textarea><br>
